<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/search_item"
        android:icon="@drawable/ic_search"
        android:title="@string/search_menu_item_title"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/categories_item"
        android:icon="@drawable/ic_dashboard"
        android:title="@string/categories_menu_item_title"
        app:showAsAction="ifRoom">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/all_item"
                    android:title="@string/all_heads_menu_item_title" />
                <item
                    android:id="@+id/alphabet_item"
                    android:title="@string/alphabet_menu_item_title" />
                <item
                    android:id="@+id/monsters_item"
                    android:title="@string/monsters_menu_item_title" />
                <item
                    android:id="@+id/humanoid_item"
                    android:title="@string/humanoid_menu_item_title" />
                <item
                    android:id="@+id/food_and_drinks_item"
                    android:title="@string/food_and_drinks_menu_item_title" />
                <item
                    android:id="@+id/miscellaneous_item"
                    android:title="@string/miscellaneous_menu_item_title" />
                <item
                    android:id="@+id/plants_item"
                    android:title="@string/plants_menu_item_title" />
                <item
                    android:id="@+id/decoration_item"
                    android:title="@string/decoration_menu_item_title" />
                <item
                    android:id="@+id/blocks_item"
                    android:title="@string/blocks_menu_item_title" />
                <item
                    android:id="@+id/animals_item"
                    android:title="@string/animals_menu_item_title" />
                <item
                    android:id="@+id/humans_item"
                    android:title="@string/humans_menu_item_title" />
            </group>
        </menu>
    </item>
</menu>